--- a/app/src/main/res/navigation/app_nav_graph.xml
+++ b/app/src/main/res/navigation/app_nav_graph.xml
@@ -3,19 +3,64 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/app_nav_graph"
-    app:startDestination="@id/mapsFragment">
+    app:startDestination="@id/splashFragment">
+    <action
+        android:id="@+id/action_to_add_offer"
+        app:destination="@id/offerManagementFragment"
+        app:enterAnim="@anim/slide_from_out_right_to_center"
+        app:exitAnim="@anim/slide_from_center_to_out_left">
+    </action>
+    <action
+        android:id="@+id/action_to_add_branch"
+        app:destination="@id/branchManagementFragment"
+        app:enterAnim="@anim/slide_from_out_right_to_center"
+        app:exitAnim="@anim/slide_from_center_to_out_left">
+    </action>
+
     <fragment
         android:id="@+id/splashFragment"
         android:name="com.travisit.travisitbusiness.vvm.destination.SplashFragment"
         android:label="fragment_splash"
         tools:layout="@layout/fragment_splash" >
         <action
-            android:id="@+id/action_to_auth_graph"
+            android:id="@+id/action_from_splash_to_auth_graph"
             app:destination="@id/auth_graph"
             app:enterAnim="@anim/slide_from_out_right_to_center"
             app:exitAnim="@anim/slide_from_center_to_out_left"
             app:popUpTo="@id/app_nav_graph"
-            app:popUpToInclusive="true"/>
+            app:popUpToInclusive="false"/>
+        <action
+            android:id="@+id/action_from_splash_to_home"
+            app:destination="@id/homeFragment"
+            app:enterAnim="@anim/slide_from_out_right_to_center"
+            app:exitAnim="@anim/slide_from_center_to_out_left"
+            app:popUpTo="@id/app_nav_graph"
+            app:popUpToInclusive="false"/>
+        <action
+            android:id="@+id/action_from_splash_to_complete_profile"
+            app:destination="@id/auth_graph"
+            app:enterAnim="@anim/slide_from_out_right_to_center"
+            app:popUpTo="@id/app_nav_graph"
+            app:popUpToInclusive="false"
+            app:exitAnim="@anim/slide_from_center_to_out_right">
+            <argument
+                android:name="user"
+                android:defaultValue="@null"
+                app:argType="com.travisit.travisitbusiness.model.Business"
+                app:nullable="true"/>
+        </action>
+        <action
+            android:id="@+id/action_from_splash_to_show_account_status"
+            app:destination="@id/accountStatusFragment"
+            app:enterAnim="@anim/slide_from_out_right_to_center"
+            app:exitAnim="@anim/slide_from_center_to_out_left"
+            app:popUpTo="@id/app_nav_graph"
+            app:popUpToInclusive="false">
+            <argument
+                android:name="is_verified"
+                android:defaultValue="false"
+                app:argType="boolean" />
+        </action>
     </fragment>
     <navigation
         android:id="@+id/auth_graph"
@@ -25,6 +70,11 @@
             android:name="com.travisit.travisitbusiness.vvm.destination.AuthenticationFragment"
             android:label="fragment_authentication"
             tools:layout="@layout/fragment_authentication">
+            <argument
+                android:name="user"
+                android:defaultValue="@null"
+                app:argType="com.travisit.travisitbusiness.model.Business"
+                app:nullable="true"/>
             <action
                 android:id="@+id/action_from_auth_to_reg"
                 app:destination="@id/registrationFragment"
@@ -43,29 +93,35 @@
             <action
                 android:id="@+id/action_from_auth_to_complete_profile"
                 app:destination="@id/completeProfileFragment"
-                app:enterAnim="@anim/slide_from_out_left_to_center"
-                app:exitAnim="@anim/slide_from_center_to_out_right">
-
-            </action>
-            <action
-                android:id="@+id/action_from_auth_to_home"
-                app:destination="@id/homeFragment"
                 app:enterAnim="@anim/slide_from_out_right_to_center"
-                app:exitAnim="@anim/slide_from_center_to_out_left"
-                app:popUpTo="@id/authenticationFragment"
-                app:popUpToInclusive="false"/>
+                app:exitAnim="@anim/slide_from_center_to_out_right"
+                app:popUpTo="@id/auth_graph"
+                app:popUpToInclusive="false">
+                <argument
+                    android:name="user"
+                    android:defaultValue="@null"
+                    app:argType="com.travisit.travisitbusiness.model.Business"
+                    app:nullable="true"/>
+            </action>
             <action
                 android:id="@+id/action_from_auth_to_show_account_status"
                 app:destination="@id/accountStatusFragment"
                 app:enterAnim="@anim/slide_from_out_right_to_center"
                 app:exitAnim="@anim/slide_from_center_to_out_left"
-                app:popUpTo="@id/authenticationFragment"
+                app:popUpTo="@id/auth_graph"
                 app:popUpToInclusive="false">
                 <argument
                     android:name="is_verified"
                     android:defaultValue="false"
                     app:argType="boolean" />
             </action>
+            <action
+                android:id="@+id/action_from_auth_to_home"
+                app:destination="@id/homeFragment"
+                app:enterAnim="@anim/slide_from_out_right_to_center"
+                app:exitAnim="@anim/slide_from_center_to_out_left"
+                app:popUpTo="@id/app_nav_graph"
+                app:popUpToInclusive="false"/>
         </fragment>
         <fragment
             android:id="@+id/registrationFragment"
@@ -126,12 +182,20 @@
                 app:destination="@id/accountStatusFragment"
                 app:enterAnim="@anim/slide_from_out_right_to_center"
                 app:exitAnim="@anim/slide_from_center_to_out_left"
-                app:popUpTo="@id/authenticationFragment"
+                app:popUpTo="@id/auth_graph"
                 app:popUpToInclusive="false">
                 <argument
                     android:name="is_verified"
                     android:defaultValue="false"
                     app:argType="boolean" />
+            </action>
+            <action
+                android:id="@+id/action_from_complete_profile_to_home"
+                app:destination="@id/homeFragment"
+                app:enterAnim="@anim/slide_from_out_right_to_center"
+                app:exitAnim="@anim/slide_from_center_to_out_left"
+                app:popUpTo="@id/auth_graph"
+                app:popUpToInclusive="false">
             </action>
         </fragment>
         <fragment
@@ -169,6 +233,7 @@
                 app:argType="string"
                 app:nullable="true"/>
         </fragment>
+
     </navigation>
 
     <fragment
@@ -187,6 +252,11 @@
                 app:argType="com.travisit.travisitbusiness.model.Offer"
                 app:nullable="true"/>
         </action>
+        <action
+            android:id="@+id/action_from_home_to_profile"
+            app:destination="@id/profileFragment"
+            app:enterAnim="@anim/slide_from_out_right_to_center"
+            app:exitAnim="@anim/slide_from_center_to_out_left"/>
     </fragment>
     <fragment
         android:id="@+id/branchesFragment"
@@ -195,7 +265,7 @@
         tools:layout="@layout/fragment_branches">
         <action
             android:id="@+id/action_from_branches_to_edit_branch"
-            app:destination="@id/editBranchFragment"
+            app:destination="@id/branchManagementFragment"
             app:enterAnim="@anim/slide_from_out_right_to_center"
             app:exitAnim="@anim/slide_from_center_to_out_left">
             <argument
@@ -215,7 +285,20 @@
         android:id="@+id/accountFragment"
         android:name="com.travisit.travisitbusiness.vvm.destination.AccountFragment"
         android:label="fragment_account"
-        tools:layout="@layout/fragment_account" />
+        tools:layout="@layout/fragment_account">
+        <action
+            android:id="@+id/action_from_account_to_profile"
+            app:destination="@id/profileFragment"
+            app:enterAnim="@anim/slide_from_out_right_to_center"
+            app:exitAnim="@anim/slide_from_center_to_out_left"/>
+        <action
+            android:id="@+id/action_from_account_logout"
+            app:destination="@id/auth_graph"
+            app:enterAnim="@anim/slide_from_out_right_to_center"
+            app:exitAnim="@anim/slide_from_center_to_out_left"
+            app:popUpTo="@id/app_nav_graph"
+            app:popUpToInclusive="true"/>
+    </fragment>
     <fragment
         android:id="@+id/accountStatusFragment"
         android:name="com.travisit.travisitbusiness.vvm.destination.AccountStatusFragment"
@@ -235,10 +318,12 @@
             app:popUpTo="@id/app_nav_graph"
             app:popUpToInclusive="true"/>
         <action
-            android:id="@+id/action_from_account_status_to_home"
-            app:destination="@id/homeFragment"
+            android:id="@+id/action_from_account_status_logout"
+            app:destination="@id/auth_graph"
             app:enterAnim="@anim/slide_from_out_right_to_center"
-            app:exitAnim="@anim/slide_from_center_to_out_left"/>
+            app:exitAnim="@anim/slide_from_center_to_out_left"
+            app:popUpTo="@id/app_nav_graph"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/offerDetailsFragment"
@@ -251,8 +336,8 @@
             app:argType="com.travisit.travisitbusiness.model.Offer"
             app:nullable="true"/>
         <action
-            android:id="@+id/action_from_offer_details_to_edit_management"
-            app:destination="@id/offerDetailsFragment"
+            android:id="@+id/action_from_offer_details_to_edit_offer"
+            app:destination="@id/offerManagementFragment"
             app:enterAnim="@anim/slide_from_out_right_to_center"
             app:exitAnim="@anim/slide_from_center_to_out_left">
             <argument
@@ -274,10 +359,10 @@
             app:nullable="true"/>
     </fragment>
     <fragment
-        android:id="@+id/editBranchFragment"
-        android:name="com.travisit.travisitbusiness.EditBranchFragment"
+        android:id="@+id/branchManagementFragment"
+        android:name="com.travisit.travisitbusiness.vvm.destination.BranchManagementFragment"
         android:label="fragment_edit_branch"
-        tools:layout="@layout/fragment_edit_branch" >
+        tools:layout="@layout/fragment_branch_management" >
         <argument
             android:name="branch"
             android:defaultValue="@null"
@@ -288,6 +373,30 @@
             app:argType="com.google.android.gms.maps.model.LatLng"
             app:nullable="true"
             android:defaultValue="@null" />
+        <action
+            android:id="@+id/action_branch_to_map"
+            app:destination="@id/mapsFragment"
+            app:enterAnim="@anim/slide_from_out_right_to_center"
+            app:exitAnim="@anim/slide_from_center_to_out_left"
+            app:popUpTo="@id/app_nav_graph"
+            app:popUpToInclusive="true">
+        </action>
+    </fragment>
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.travisit.travisitbusiness.vvm.destination.ProfileFragment"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile" />
+    <fragment
+        android:id="@+id/editBranchFragment"
+        android:name="com.travisit.travisitbusiness.vvm.destination.EditBranchFragment"
+        android:label="fragment_edit_branch"
+        tools:layout="@layout/fragment_edit_branch" >
+        <argument
+            android:name="branch"
+            android:defaultValue="@null"
+            app:argType="com.travisit.travisitbusiness.model.Branch"
+            app:nullable="true"/>
     </fragment>
     <fragment
         android:id="@+id/mapsFragment"
@@ -296,12 +405,16 @@
         tools:layout="@layout/fragment_maps" >
         <action
             android:id="@+id/action_map_to_branch"
-            app:destination="@id/editBranchFragment"
+            app:destination="@id/branchManagementFragment"
             app:enterAnim="@anim/slide_from_out_right_to_center"
             app:exitAnim="@anim/slide_from_center_to_out_left"
             app:popUpTo="@id/app_nav_graph"
             app:popUpToInclusive="true">
+            <argument
+                android:name="location"
+                app:argType="com.google.android.gms.maps.model.LatLng"
+                app:nullable="true"
+                android:defaultValue="@null" />
         </action>
     </fragment>
-
 </navigation>
